<?xml version="1.0"?>
<package>
  <name>rosplan_pytools</name>
  <version>0.0.1</version>
  <description>An easier way to hook in ROSPlan using Python</description>

  <maintainer email="dgerod@xyz-lab.org.es">Diego Escudero</maintainer>

  <license>TODO</license>
  <url type="website">https://github.com/dgerod/rosplan_pytools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>action_lib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>action_lib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>

  <export></export>
</package>
